--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,15 +50,13 @@ jobs:
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-            
             <details><summary>Show Plan</summary>
 
             \`\`\`terraform\n
             ${process.env.PLAN}
             \`\`\`
 
-            </details>
-            ;
+            </details>`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
